[package]
name = "cargo-wat"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8" }
# inline array
getrandom = { version = "0.2", features = ["std", "test-in-browser"] }

# Array of tables
[[bin]]
name = "example"
path = "src/bin/example.rs"

[[bin]]
name = "another"
path = "src/bin/another.rs"

# bins = [
#     { name = "example", path = "src/bin/example.rs" },
#     { name = "another", path = "src/bin/another.rs" },
# ]
